--- a/CoreEngine/CoreEngine.csproj
+++ b/CoreEngine/CoreEngine.csproj
@@ -39,23 +39,53 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Core.cs" />
+    <Compile Include="Lua\Canvas.cs" />
+    <Compile Include="Lua\CoreColor.cs" />
+    <Compile Include="Modularization\ReferenceType.cs" />
+    <Compile Include="Modularization\ReferenceData.cs" />
+    <Compile Include="Modularization\Module.cs" />
+    <Compile Include="Modularization\ModuleControl.cs" />
+    <Compile Include="Modularization\ModuleDefinition.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\GameServices.cs" />
+    <Compile Include="Utilities\TypeReflector.cs" />
+    <Compile Include="World\Camera.cs" />
     <Compile Include="World\Map.cs" />
     <Compile Include="World\MapTile.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildProgramFiles32)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="MoonSharp.Interpreter, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MoonSharp.1.5.0.1\lib\net40-client\MoonSharp.Interpreter.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DevModule\tiles\Dirt\Dirt.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\Fonts\System.spritefont" />
+    <None Include="DevModule\module.json" />
+    <None Include="DevModule\tiles\Dirt\Dirt.json" />
+    <None Include="DevModule\tiles\Dirt\Dirt.lua" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
