--- a/CoreEngine/packages.config
+++ b/CoreEngine/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="IronRuby" version="1.1.3" targetFramework="net40" />
   <package id="MonoGame.Framework.MacOS" version="3.3.0.0" targetFramework="net45" />
-  <package id="MoonSharp" version="1.5.0.1" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net40" />
 </packages>
