--- a/CoreEngine/CoreEngine.csproj
+++ b/CoreEngine/CoreEngine.csproj
@@ -53,9 +53,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripting\CoreFont.cs" />
+    <Compile Include="Utilities\DependencyGraph.cs" />
+    <Compile Include="Utilities\DynamicDelegate.cs" />
     <Compile Include="Utilities\GameServices.cs" />
     <Compile Include="Utilities\RubyConverter.cs" />
-    <Compile Include="Utilities\TypeReflector.cs" />
+    <Compile Include="Utilities\TypeServices.cs" />
     <Compile Include="World\Camera.cs" />
     <Compile Include="World\DrawQueue.cs" />
     <Compile Include="World\Map.cs" />
@@ -109,7 +111,7 @@
     <None Include="CoreScript.md" />
     <None Include="DevModule\module.json" />
     <None Include="DevModule\Launch.rb" />
-    <None Include="DevModule\tiles\Stone\children\SubStone.rb" />
+    <None Include="DevModule\tiles\Stone\AStone.rb" />
     <None Include="DevModule\tiles\Stone\Stone.rb" />
     <None Include="packages.config" />
   </ItemGroup>
