--- a/CoreEngine/CoreEngine.csproj
+++ b/CoreEngine/CoreEngine.csproj
@@ -61,7 +61,6 @@
     <Compile Include="World\Camera.cs" />
     <Compile Include="World\DrawQueue.cs" />
     <Compile Include="World\Map.cs" />
-    <Compile Include="Entities\MapTile.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="IronRuby, Version=1.1.3.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
@@ -100,7 +99,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Modules\Core\tiles\Stone.png" />
+    <Content Include="Content\Modules\DevModule\tiles\Stone\Stone.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -108,21 +107,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\Fonts\System.spritefont" />
+    <None Include="Content\Modules\Core\Entities\MapTile.rb" />
     <None Include="Content\Modules\Core\Main.rb" />
     <None Include="Content\Modules\Core\module.json" />
     <None Include="CoreScript.md" />
     <None Include="Content\Modules\DevModule\module.json" />
     <None Include="Content\Modules\DevModule\Main.rb" />
-    <None Include="Content\Modules\Core\tiles\AStone.rb" />
-    <None Include="Content\Modules\Core\tiles\Stone.rb" />
+    <None Include="Content\Modules\DevModule\tiles\Stone\AStone.rb" />
+    <None Include="Content\Modules\DevModule\tiles\Stone\Stone.rb" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\Modules\DevModule\tiles\Stone\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <PropertyGroup>
