--- a/CoreEngine/CoreEngine.csproj
+++ b/CoreEngine/CoreEngine.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -14,6 +14,8 @@
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <MonoGameContentBuilderExe>
     </MonoGameContentBuilderExe>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -24,6 +26,7 @@
     <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -33,6 +36,7 @@
     <DefineConstants>TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
@@ -41,9 +45,16 @@
     <Compile Include="Core.cs" />
     <Compile Include="Entities.Interfaces\IUpdatableEntity.cs" />
     <Compile Include="Entities.Interfaces\IDrawableEntity.cs" />
+    <Compile Include="Entities\Animation.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
+    <Compile Include="Entities\CoreObject.cs" />
+    <Compile Include="Entities\CoreObjectData.cs" />
     <Compile Include="Entities\EntityController.cs" />
     <Compile Include="Entities\EntityData.cs" />
+    <Compile Include="Events\EventBundle.cs" />
+    <Compile Include="Events\EventController.cs" />
+    <Compile Include="Events\EventDefinition.cs" />
+    <Compile Include="Events\EventRequest.cs" />
     <Compile Include="Scripting\Canvas.cs" />
     <Compile Include="Scripting\CoreColor.cs" />
     <Compile Include="Modularization\CoreScript.cs" />
@@ -54,12 +65,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripting\CoreFont.cs" />
     <Compile Include="Utilities\DependencyGraph.cs" />
+    <Compile Include="Utilities\DrawQueue.cs" />
     <Compile Include="Utilities\DynamicDelegate.cs" />
     <Compile Include="Utilities\GameServices.cs" />
     <Compile Include="Utilities\RubyConverter.cs" />
     <Compile Include="Utilities\TypeServices.cs" />
     <Compile Include="World\Camera.cs" />
-    <Compile Include="World\DrawQueue.cs" />
     <Compile Include="World\Map.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +117,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Content\Fonts\System.spritefont" />
     <None Include="Content\Modules\Core\Entities\MapTile.rb" />
     <None Include="Content\Modules\Core\Main.rb" />
