--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/Modules/PlumeRPG/PlumeRPG.dll
+/Modules/DevModule/DevModule.dll
