--- a/PlumeRPG/PlumeRPG.csproj
+++ b/PlumeRPG/PlumeRPG.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2A061B3C-2AFC-4385-BC19-0AEFEC20DA6B}</ProjectGuid>
+    <ProjectGuid>{9EC7D273-7E30-4DBB-9E66-BA9BE0134905}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DevModule</RootNamespace>
-    <AssemblyName>DevModule</AssemblyName>
+    <RootNamespace>PlumeRPG</RootNamespace>
+    <AssemblyName>PlumeRPG</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Modules\DevModule\</OutputPath>
+    <OutputPath>..\Modules\PlumeRPG\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -44,9 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\MapTile.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="Tiles\Astone.cs" />
-    <Compile Include="Tiles\Stone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -55,19 +54,6 @@
       <Name>PlumeAPI</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\PlumeRPG\PlumeRPG.csproj">
-      <Project>{9ec7d273-7e30-4dbb-9e66-ba9be0134905}</Project>
-      <Name>PlumeRPG</Name>
-      <Private>False</Private>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Assets\excavator.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\Stone.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="module.json">
