Changed startup attribute to json definition

--- a/PlumeAPI/PlumeAPI.csproj
+++ b/PlumeAPI/PlumeAPI.csproj
@@ -33,10 +33,11 @@
     <Reference Include="MonoGame.Framework, Version=3.4.0.456, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,7 +49,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\PlumeStartupAttribute.cs" />
     <Compile Include="Attributes\RunOnLoadAttribute.cs" />
     <Compile Include="Entities.Interfaces\IDrawableEntity.cs" />
     <Compile Include="Entities.Interfaces\IUpdatableEntity.cs" />
