--- a/PlumeClient/packages.config
+++ b/PlumeClient/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="IronRuby" version="1.1.3" targetFramework="net40" />
+  <package id="Lidgren.Network" version="1.0.2" targetFramework="net46" />
   <package id="MonoGame.Framework.MacOS" version="3.3.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
 </packages>
