Abstracted server/client stuff to lower bandwidth, generalized networking to PlumeAPI to allow module support.

--- a/PlumeRPG/PlumeRPG.csproj
+++ b/PlumeRPG/PlumeRPG.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Lidgren.Network, Version=3.4.0.456, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="MonoGame.Framework, Version=3.4.0.456, Culture=neutral, processorArchitecture=MSIL">
       <Private>False</Private>
     </Reference>
