--- a/PlumeAPI/PlumeAPI.csproj
+++ b/PlumeAPI/PlumeAPI.csproj
@@ -53,8 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\RunOnLoadAttribute.cs" />
+    <Compile Include="Attributes\SyncableAttribute.cs" />
     <Compile Include="Entities.Interfaces\IDrawableEntity.cs" />
+    <Compile Include="Entities.Interfaces\IRegisterableEntity.cs" />
     <Compile Include="Entities.Interfaces\IUpdatableEntity.cs" />
     <Compile Include="Entities\Animation.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
@@ -64,23 +65,33 @@
     <Compile Include="Events\EventDefinition.cs" />
     <Compile Include="Graphics\Canvas.cs" />
     <Compile Include="Graphics\FontRepository.cs" />
+    <Compile Include="Graphics\TextureController.cs" />
     <Compile Include="Modularization\Module.cs" />
     <Compile Include="Modularization\ModuleController.cs" />
     <Compile Include="Modularization\ModuleDefinition.cs" />
     <Compile Include="Modularization\PlumeModule.cs" />
+    <Compile Include="Networking.Builtin\SyncMessageTypesMessageHandler.cs" />
+    <Compile Include="Networking.Builtin\RequestConnectionMessageHandler.cs" />
+    <Compile Include="Networking.Builtin\SendScopeMessageHandler.cs" />
+    <Compile Include="Networking.Builtin\UpdateEntityMessageHandler.cs" />
     <Compile Include="Networking\Client.cs" />
+    <Compile Include="Networking\ClientMessageDispatch.cs" />
     <Compile Include="Networking\MessageHandler.cs" />
     <Compile Include="Networking\MessageController.cs" />
+    <Compile Include="Networking\ServerMessageDispatch.cs" />
     <Compile Include="Utilities\DependencyGraph.cs" />
     <Compile Include="Utilities\GameServices.cs" />
     <Compile Include="Utilities\TypeServices.cs" />
+    <Compile Include="Utilities\Utilities.cs" />
     <Compile Include="World\Camera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="World\EntityScope.cs" />
+    <Compile Include="World\ScopeController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
