Added linear interpolation, snapshotting, commands, actors.

--- a/PlumeServer/PlumeServer.csproj
+++ b/PlumeServer/PlumeServer.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration.cs" />
     <Compile Include="PlumeServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerCore.cs" />
