--- a/PlumeAPI/PlumeAPI.csproj
+++ b/PlumeAPI/PlumeAPI.csproj
@@ -53,7 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\InterpolateAttribute.cs" />
     <Compile Include="Attributes\SyncableAttribute.cs" />
+    <Compile Include="Commands.Builtin\BuiltinCommandRegistrator.cs" />
+    <Compile Include="Commands.Builtin\DebugCommands.cs" />
+    <Compile Include="Commands.Builtin\NetworkCommands.cs" />
+    <Compile Include="Commands\CommandController.cs" />
     <Compile Include="Entities.Interfaces\IDrawableEntity.cs" />
     <Compile Include="Entities.Interfaces\IRegisterableEntity.cs" />
     <Compile Include="Entities.Interfaces\IUpdatableEntity.cs" />
@@ -61,6 +66,8 @@
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\CoreObject.cs" />
     <Compile Include="Entities\EntityController.cs" />
+    <Compile Include="Entities\EntityInterpolation.cs" />
+    <Compile Include="Entities\ClientEntitySnapshot.cs" />
     <Compile Include="Events\EventController.cs" />
     <Compile Include="Events\EventData.cs" />
     <Compile Include="Events\EventDefinition.cs" />
@@ -71,21 +78,27 @@
     <Compile Include="Modularization\ModuleController.cs" />
     <Compile Include="Modularization\ModuleDefinition.cs" />
     <Compile Include="Modularization\PlumeModule.cs" />
+    <Compile Include="Networking.Builtin\ForwardCommandToServerMessageHandler.cs" />
+    <Compile Include="Networking.Builtin\SendModuleRequirementsMessageHandler.cs" />
     <Compile Include="Networking.Builtin\SendScopeSnapshotMessageHandler.cs" />
     <Compile Include="Networking.Builtin\SyncEntityIdsMessageHandler.cs" />
+    <Compile Include="Networking.Builtin\SyncEntityToClientMessageHandler.cs" />
     <Compile Include="Networking.Builtin\SyncMessageTypesMessageHandler.cs" />
     <Compile Include="Networking.Builtin\RequestConnectionMessageHandler.cs" />
     <Compile Include="Networking.Builtin\SendScopeMessageHandler.cs" />
-    <Compile Include="Networking.Builtin\UpdateEntityMessageHandler.cs" />
     <Compile Include="Networking\Client.cs" />
     <Compile Include="Networking\ClientMessageDispatch.cs" />
+    <Compile Include="Networking\OutgoingMessage.cs" />
+    <Compile Include="Networking\IncomingMessage.cs" />
+    <Compile Include="Networking\Message.cs" />
     <Compile Include="Networking\MessageHandler.cs" />
     <Compile Include="Networking\MessageController.cs" />
     <Compile Include="Networking\ServerMessageDispatch.cs" />
+    <Compile Include="Utilities\Configuration.cs" />
     <Compile Include="Utilities\DependencyGraph.cs" />
     <Compile Include="Utilities\GameServices.cs" />
     <Compile Include="Utilities\TypeServices.cs" />
-    <Compile Include="Utilities\Utilities.cs" />
+    <Compile Include="Utilities\ExtensionMethods.cs" />
     <Compile Include="World\Camera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="World\EntityScope.cs" />
@@ -94,6 +107,7 @@
     <Compile Include="World\ScopeSnapshot.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="limitations.md" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
