--- a/PlumeRPG/PlumeRPG.csproj
+++ b/PlumeRPG/PlumeRPG.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Entities\MapTile.cs" />
     <Compile Include="Entities\Player.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="Networking.Handlers\SendUserDataMessageHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
