about to remove server

--- a/PlumeAPI/PlumeAPI.csproj
+++ b/PlumeAPI/PlumeAPI.csproj
@@ -57,19 +57,20 @@
     <Compile Include="Commands.Builtin\DebugCommands.cs" />
     <Compile Include="Commands.Builtin\NetworkCommands.cs" />
     <Compile Include="Commands\CommandController.cs" />
-    <Compile Include="Entities.Interfaces\IDrawableEntity.cs" />
-    <Compile Include="Entities.Interfaces\IRegisterableEntity.cs" />
-    <Compile Include="Entities.Interfaces\IUpdatableEntity.cs" />
-    <Compile Include="Entities\Animation.cs" />
+    <Compile Include="Entities.Components\DrawAnimationComponent.cs" />
+    <Compile Include="Entities.Components\DrawTextureComponent.cs" />
+    <Compile Include="Entities.Components\DrawComponent.cs" />
+    <Compile Include="Entities.Components\EntityComponent.cs" />
+    <Compile Include="Entities.Components\EventTriggeredComponent.cs" />
+    <Compile Include="Entities.Components\NetworkedComponent.cs" />
+    <Compile Include="Entities.Components\PositionalComponent.cs" />
+    <Compile Include="Graphics\Animation.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
-    <Compile Include="Entities\CoreObject.cs" />
     <Compile Include="Entities\EntityController.cs" />
     <Compile Include="Entities\EntityInterpolation.cs" />
     <Compile Include="Entities\ClientEntitySnapshot.cs" />
-    <Compile Include="Entities\EntityPropertyData.cs" />
     <Compile Include="Events\EventController.cs" />
     <Compile Include="Events\EventData.cs" />
-    <Compile Include="Events\EventDefinition.cs" />
     <Compile Include="Graphics\Canvas.cs" />
     <Compile Include="Graphics\FontRepository.cs" />
     <Compile Include="Graphics\TextureController.cs" />
