--- a/DevModule/DevModule.csproj
+++ b/DevModule/DevModule.csproj
@@ -46,8 +46,6 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="Messages\DebugMessage.cs" />
-    <Compile Include="Tiles\Astone.cs" />
-    <Compile Include="Tiles\Stone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -79,8 +77,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Entities\tiles.json" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
