--- a/PlumeServer/PlumeServer.csproj
+++ b/PlumeServer/PlumeServer.csproj
@@ -58,7 +58,6 @@
     <Compile Include="PlumeServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerCore.cs" />
-    <Compile Include="World\Map.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -72,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Networking\" />
+    <Folder Include="World\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
